# draw-and-guess

./: .gitignore  CLAUDE.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: canvas.ts  main.ts  state.ts  style.css  ws.ts
client/src/pages/: admin.ts  gallery.ts  game.ts  home.ts  lobby.ts  result.ts
deploy/: deploy-python.sh  deploy.sh  draw-and-guess.service  setup-server.sh
deploy/deploy-package/: db.py  draw-and-guess-python.service  game.py  models.py  room_manager.py  words.py
docs/superpowers/plans/: 2026-06-29-python-server-rewrite.md
docs/superpowers/specs/: 2026-06-29-python-server-rewrite-design.md
server/: Cargo.toml  build.bat
server-python/: admin.py  db.py  game.py  main.py  models.py  requirements.txt  room_manager.py  words.py  ws_handler.py
server-python/tests/: conftest.py  test_game.py  test_room.py
server/client/: index.html
server/client/assets/: index-BShtwAsA.css  index-D06Y1B4O.js
server/src/: game.rs  main.rs  room.rs  types.rs  words.rs  ws.rs
